--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# API Configuration
+# Backend API URL for quote requests
+VITE_API_BASE_URL=http://localhost:3001/api
+
 # N8N Configuration
 # Add your N8N webhook URL here
 VITE_N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
@@ -8,6 +12,3 @@ VITE_GOOGLE_API_KEY=your-google-api-key-here
 
 # Optional: Google OAuth Client ID (for client-side OAuth)
 VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-
-# Optional: Backend API URL (if you have a separate backend)
-VITE_API_BASE_URL=http://localhost:3000/api
