--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,10 @@
-# API Configuration
-# Backend API URL for quote requests
-VITE_API_BASE_URL=http://localhost:3001/api
-
 # N8N Configuration
 # Add your N8N webhook URL here
 VITE_N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
 
-# Google API Configuration
-# Add your Google API key or OAuth credentials here
-VITE_GOOGLE_API_KEY=your-google-api-key-here
+# Vercel Postgres Configuration (auto-populated by Vercel in production)
+# Only needed for local development with `vercel dev`
+# POSTGRES_URL=
+# POSTGRES_PRISMA_URL=
+# POSTGRES_URL_NON_POOLING=
 
-# Optional: Google OAuth Client ID (for client-side OAuth)
-VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
