--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
+    "ignoreDeprecations": "6.0",
     "moduleResolution": "node",
     "lib": ["ES2022"],
     "outDir": "./dist",
