--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Add your N8N webhook URL here
 VITE_N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
 
+# Feedback Fish Configuration
+# Get your project ID from https://feedback.fish/
+VITE_FEEDBACK_FISH_PROJECT_ID=your_project_id_here
+
 # Vercel Postgres Configuration (auto-populated by Vercel in production)
 # Only needed for local development with `vercel dev`
 # POSTGRES_URL=
