Add Feedback Fish project ID to environment example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ VITE_N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
 
 # Feedback Fish Configuration
 # Get your project ID from https://feedback.fish/
-VITE_FEEDBACK_FISH_PROJECT_ID=your_project_id_here
+VITE_FEEDBACK_FISH_PROJECT_ID="d81d5c3c894866"
 
 # Vercel Postgres Configuration (auto-populated by Vercel in production)
 # Only needed for local development with `vercel dev`
