Replace Feedback Fish with n8n webhook + database storage for user feedback

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,8 @@
 # Add your N8N webhook URL here
 VITE_N8N_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
 
-# Feedback Fish Configuration
-# Get your project ID from https://feedback.fish/
-VITE_FEEDBACK_FISH_PROJECT_ID="d81d5c3c894866"
+# N8N Feedback Webhook (separate workflow for user feedback emails)
+N8N_FEEDBACK_WEBHOOK_URL=https://your-n8n-instance.com/webhook/feedback
 
 # Vercel Postgres Configuration (auto-populated by Vercel in production)
 # Only needed for local development with `vercel dev`
