feat: improve dev setup, accessibility, and login
- Two-terminal dev setup (API port 3001, Frontend port 3000)
- Fixed Vite 7 compatibility issues
- Added 10s login timeout and better error messages
- Form accessibility improvements (ids, autocomplete, labels, ARIA)
- Updated all documentation with correct credentials
- Added machine schedule insights feature (DISABLED via feature flag)

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "vercel dev --listen 3001 --yes",
+    "dev:vercel": "vercel dev",
+    "dev:full": "vercel dev",
+    "start": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
