Send form submissions directly to n8n to avoid Vercel body size limits

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
       "source": "/((?!api).*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/webhook.js": {
+      "maxDuration": 60,
+      "memory": 1024
+    }
+  }
 }
