Exclude email-templates from SPA rewrites to serve actual template files

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "installCommand": "npm install",
   "rewrites": [
     {
-      "source": "/((?!api).*)",
+      "source": "/((?!api|email-templates).*)",
       "destination": "/index.html"
     }
   ],
